.provarCaches/00D5f000005vwGkEAI/objects/rstk__solineser__c.object
<CustomObject>
    <description>solineser__c - Sales Order Line Serial Numbers</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__solineser_soline__r.rstk__externalid__c  &amp; &apos;_&apos; &amp;  rstk__solineser_srlno__c &amp; &apos;_&apos; &amp;  rstk__solineser_lotno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>IF (OR(rstk__solineser_srlno__c ==&apos;&apos;,rstk__solineser_srlno__c == null),
  rstk__solineser_soline__r.Name  &amp; &apos;_&apos; &amp;  rstk__solineser_lotno__c,
  rstk__solineser_soline__r.Name  &amp; &apos;_&apos; &amp;  rstk__solineser_srlno__c
)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Item Number</description>
        <inlineHelpText>The Inventory Item Number associated with this RS Product.</inlineHelpText>
        <label>Inventory Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_icitemlot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory By Lot</label>
        <referenceTo>rstk__icitemlot__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_icitemsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serialized Inventory</description>
        <inlineHelpText>The Serial record in Inventory for this serialized Product.</inlineHelpText>
        <label>Serialized Inventory</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>inventory Location</description>
        <inlineHelpText>The Inventory Location in which this serial item is located.</inlineHelpText>
        <label>inventory Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_issued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Issued</description>
        <inlineHelpText>Quantity Issued</inlineHelpText>
        <label>Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_lotno__c</fullName>
        <description>Lot number</description>
        <inlineHelpText>Lot number</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Number</description>
        <inlineHelpText>The Project Number for which this item is in Inventory under.</inlineHelpText>
        <label>Project Number</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_qtyissue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_soline__c</fullName>
        <description>Sales Order Line</description>
        <inlineHelpText>The Sales Order Line for which this Ordered Serial record is associated.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Ordered Serial Numbers</relationshipLabel>
        <relationshipName>solinesers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_srlno__c</fullName>
        <description>Serial Number</description>
        <inlineHelpText>The Serial Number for which this record applies.</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solineser_srlnoidx__c</fullName>
        <externalId>true</externalId>
        <label>Indexed Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Ordered Serial Numbers</label>
    <listViews>
        <fullName>rstk__SOLINESER</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>rstk__solineser_lotno__c</columns>
        <columns>rstk__solineser_qty__c</columns>
        <columns>rstk__solineser_qtyissue__c</columns>
        <columns>rstk__solineser_icitemlot__c</columns>
        <columns>rstk__formula_name__c</columns>
        <columns>rstk__solineser_icitem__c</columns>
        <columns>rstk__solineser_iclocitem__c</columns>
        <columns>rstk__solineser_issued__c</columns>
        <columns>rstk__solineser_pjproj__c</columns>
        <columns>rstk__solineser_soline__c</columns>
        <columns>rstk__solineser_srlno__c</columns>
        <columns>rstk__solineser_icitemsrl__c</columns>
        <filterScope>Everything</filterScope>
        <label>SOLINESER</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered Serial Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>